[tool.poetry]
name = "physbubble-bot-worker"
version = "0.1.0"
description = "A bot to fetch gift data from Thermos."
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
telethon = "^1.40.0"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
python-telegram-bot = "^20.8"
orjson = "^3.10.0"
aiohttp = "^3.9.0"
httpx = "^0.26.0"
requests = "^2.32.3"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
